--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+# Exact versions used during training
+numpy==1.26.4
+scikit-learn==1.0.2
+joblib==1.4.2
+
 pandas
-scikit-learn==1.0.2  # or 1.3.2, just stay consistent
-joblib
 notebook
 ipykernel
 matplotlib
