--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+fastapi==0.95.2
+uvicorn==0.22.0
+pandas==1.5.3
 numpy==1.26.4
 scikit-learn==1.0.2
 joblib==1.4.2
-pandas
 ipykernel
 dill
 fastapi
