--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--only-binary=:all:
 fastapi==0.95.2
 uvicorn==0.22.0
 pandas==1.5.3
@@ -6,5 +7,3 @@ scikit-learn==1.0.2
 joblib==1.4.2
 ipykernel
 dill
-fastapi
-uvicorn
